--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.8.1
-#backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1
+dj-database-url==2.2.0
 Django==4.2.16
 gunicorn==23.0.0
 packaging==24.1
 pip==21.1.1
+psycopg2-binary==2.9.9
 setuptools==56.0.0
 sqlparse==0.5.1
 typing-extensions==4.12.2
