--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.8.1
-#backports.zoneinfo==0.2.1
 dj-database-url==2.2.0
 Django==4.2.16
 gunicorn==23.0.0
@@ -11,3 +10,4 @@ sqlparse==0.5.1
 typing-extensions==4.12.2
 tzdata==2024.2
 whitenoise==6.7.0
+djangorestframework==3.15.2
